--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
-  "name": "application-name",
+  "name": "2048-ai",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node start.js",
     "test": "node test.js"
   },
-  "dependencies": {}
+  "dependencies": {
+    "grunt": "~0.4.4",
+    "grunt-contrib-jshint": "~0.9.2",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-nodeunit": "~0.3.3"
+  },
+  "description": "2048 ====",
+  "main": "start.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/palf/2048.git"
+  },
+  "author": "",
+  "license": "BSD-2-Clause",
+  "bugs": {
+    "url": "https://github.com/palf/2048/issues"
+  },
+  "homepage": "https://github.com/palf/2048"
 }
